updated some of the features and did some error checking

--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+V1.3.1.2:
+Goals:
+  check for glitches and none found.
+  Made the program count the number of times that it ran
+
+V1.3.1.1:
+Goals:
+  change the method of getting the time stamps to mouse clicks not key presses. (Finished)
+
 V1.3.1.0:
 Goals:
   Add the option to do the VTT captioning (Not happened)
