preparing for a merge

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+V2.0.0.0:
+Done:
+  - Made a basic GUI that will allow for the most commonly used options.
+  - Slimed down on unneeded files
+  - Made the program more robust
+
 V1.3.1.2:
 Goals:
   check for glitches and none found.
